# Phasenet

./: README.md  pyproject.toml
Losses/: Losses.py
Losses/Metrics/: SKImage_SSIM.py  SNR_Metric.py  SoftmaxCrossentropyFromImages.py
Network_Configurations/: jones_pol_left_right_pol_filters.json  jones_pol_left_right_pol_filters_lcd.json  jones_pol_x_y_only_x.json  jones_pol_x_y_pol_filters.json  jones_pol_x_y_pol_filters_lcd.json  standard_DDNN.json
PhaseplateNetwork.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PhaseplateNetwork/Network_Configurations/: jones_pol_left_right.json  jones_pol_left_right_lcd.json  jones_pol_left_right_only_x.json  jones_pol_left_right_pol_filters_only_x.json  jones_pol_x_y.json  jones_pol_x_y_lcd.json  jones_pol_x_y_pol_filters_only_x.json  network_configuration.txt  network_configuration_jones_pol.txt
PhaseplateNetwork/TFModules/: DeepCGHBlock.py  DiscriminatorModel.py  ForwardModel.py  GradientDescentModel.py  InversePropagationLayer.py  ODMNetwork.py  PhaseplateNet.py  PropagationLayer.py  ResNetGBNet.py  ResNetNoRepeatModel.py  SaturableAbsorbtionLayer.py  UNetModel.py
PhaseplateNetwork/utils/: ImageUtils.py  data_utils.py  plotting_utils.py
TFModules/: DeepCGHModel.py  DeepCGHNetwork.py  PhasePropagationLayer.py  PropagationLayerVariableDistance.py  ResNetForwardBackwardSplittingModel.py  ResNetModel.py
TFModules/Models/: LSTMO.py  (+4 more)
Tests/: TestPaddingCropingLayers.py  TestPhasePlate.py  TestReluLayer.py
utils/: TrainingOptions.py  conversion_utils.py  io_utils.py  logic_functions.py  util.py
(+191 files in other folders)
